--- a/learn-m365-pr/wwl/deploy-mobile-device-management/5-manage-security-policies-for-mobile-device-managed-devices.yml
+++ b/learn-m365-pr/wwl/deploy-mobile-device-management/5-manage-security-policies-for-mobile-device-managed-devices.yml
@@ -4,12 +4,13 @@ title: Manage security policies for mobile device-managed devices
 metadata:
   title: Manage security policies for mobile device-managed devices
   description: "Manage security policies for mobile device-managed devices"
-  ms.date: 07/27/2021
+  ms.date: 08/01/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 7
 content: |
   [!include[](includes/5-manage-security-policies-for-mobile-device-managed-devices.md)]
