--- a/learn-m365-pr/wwl/deploy-mobile-device-management/3-configure-domains-for-mobile-device-management.yml
+++ b/learn-m365-pr/wwl/deploy-mobile-device-management/3-configure-domains-for-mobile-device-management.yml
@@ -4,12 +4,13 @@ title: Configure domains for Mobile Device Management
 metadata:
   title: Configure domains for Mobile Device Management
   description: "Configure domains for Mobile Device Management"
-  ms.date: 07/27/2021
+  ms.date: 08/01/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 3
 content: |
   [!include[](includes/3-configure-domains-for-mobile-device-management.md)]
