--- a/learn-m365-pr/wwl/manage-device-compliance/7-build-conditional-access-policies.yml
+++ b/learn-m365-pr/wwl/manage-device-compliance/7-build-conditional-access-policies.yml
@@ -6,7 +6,9 @@ metadata:
   description: "Build Conditional Access policies"
   ms.date: 08/01/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 3
