--- a/learn-m365-pr/wwl/manage-device-compliance/3-implement-compliance-policies-intune-managed-devices.yml
+++ b/learn-m365-pr/wwl/manage-device-compliance/3-implement-compliance-policies-intune-managed-devices.yml
@@ -6,7 +6,9 @@ metadata:
   description: "Implement compliance policies for Intune managed devices"
   ms.date: 08/01/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 3
