--- a/learn-m365-pr/wwl/manage-device-compliance/index.yml
+++ b/learn-m365-pr/wwl/manage-device-compliance/index.yml
@@ -11,7 +11,7 @@ metadata:
 title: Manage device compliance
 summary: This module examines device compliance policies, how organizations effectively use them, how to create policies and configure conditional users and groups, how to build Conditional Access policies, and how to monitor enrolled devices.
 abstract: |
-  By the end of this module, you will be able to:
+  By the end of this module, you'll be able to:
   - Plan for device compliance by defining the rules and settings that must be configured on a device for it to be considered compliant
   - Configure conditional users and groups for deploying profiles, policies, and apps
   - Create Conditional Access policies to implement automated access control decisions for accessing your cloud apps
