--- a/learn-m365-pr/wwl/enroll-devices-to-mobile-device-management/index.yml
+++ b/learn-m365-pr/wwl/enroll-devices-to-mobile-device-management/index.yml
@@ -3,21 +3,20 @@ uid: learn.wwl.enroll-devices-to-mobile-device-management
 metadata:
   title: Enroll devices to Mobile Device Management
   description: "Enroll devices to Mobile Device Management"
-  ms.date: 09/17/2021
+  ms.date: 08/02/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Enroll devices to Mobile Device Management
-summary: This module examines device enrollment to MDM, including Windows 10, Android, and iOS devices, how to create enrollment rules, how to enroll user-owned devices, and requiring MFA sign-in for mobile device enrollment.
+summary: This module examines device enrollment to MDM, including device enrollment methods, Azure AD joined devices, hybrid Azure AD joined devices, device enrollment methods in Intune, and enrollment for Windows devices.
 abstract: |
-  By the end of this module, you will be able to:
-  - Enroll Windows 10 and Android devices to MDM
-  - Enroll iOS devices to MDM using the Apple Device Enrollment Program
-  - Describe the use of enrollment rules to regulate device enrollment
-  - Explain how users can enroll their personal devices
-  - Explain the permissions assigned to the Device Enrollment Manager role
-  - Explain why MFA helps secure the sign-in to Microsoft 365 or Intune for mobile device enrollment
+  By the end of this module, you'll be able to:
+  - Enroll devices to mobile device management in Microsoft Intune.
+  - Explore the use of Azure AD joined and hybrid Azure AD joined devices.
+  - Explain how users can enroll their personal devices.
+  - Describe best practices and capabilities for each device enrollment method.
+  - Set up enrollment for Windows devices.
 prerequisites: |
   None
 iconUrl: /learn/achievements/mobile-device-management-enroll.svg
@@ -29,20 +28,23 @@ roles:
 - solution-architect
 - technology-manager
 products:
-- azure-active-directory
 - m365
 - office-365
 subjects:
+- cloud-computing
+- communication
+- compliance
 - device-management
 - identity-access
 units:
 - learn.wwl.enroll-devices-to-mobile-device-management.introduction
-- learn.wwl.enroll-devices-to-mobile-device-management.enroll-windows-10-android-devices
-- learn.wwl.enroll-devices-to-mobile-device-management.enroll-ios-devices-using-apple-device-enrollment-program
-- learn.wwl.enroll-devices-to-mobile-device-management.regulate-device-enrollment-by-using-enrollment-rules
-- learn.wwl.enroll-devices-to-mobile-device-management.examine-how-users-can-enroll-their-personal-devices
-- learn.wwl.enroll-devices-to-mobile-device-management.enroll-devices-using-device-enrollment-manager-account
-- learn.wwl.enroll-devices-to-mobile-device-management.examine-need-for-multi-factor-authentication-to-secure-enrollment
+- learn.wwl.enroll-devices-to-mobile-device-management.review-device-enrollment-methods
+- learn.wwl.enroll-devices-to-mobile-device-management.examine-azure-ad-registered-devices
+- learn.wwl.enroll-devices-to-mobile-device-management.explore-azure-ad-joined-devices
+- learn.wwl.enroll-devices-to-mobile-device-management.explore-hybrid-azure-ad-joined-devices
+- learn.wwl.enroll-devices-to-mobile-device-management.examine-device-enrollment-intune
+- learn.wwl.enroll-devices-to-mobile-device-management.examine-device-enrollment-capabilities
+- learn.wwl.enroll-devices-to-mobile-device-management.set-up-enrollment-for-windows-devices
 - learn.wwl.enroll-devices-to-mobile-device-management.knowledge-check
 - learn.wwl.enroll-devices-to-mobile-device-management.summary
 badge:
