--- a/learn-m365-pr/paths/implement-mobile-device-management-microsoft-365/index.yml
+++ b/learn-m365-pr/paths/implement-mobile-device-management-microsoft-365/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.implement-mobile-device-management-microsoft-365
 metadata:
-  title: Implement Mobile Device Management in Microsoft 365
-  description: Implement Mobile Device Management in Microsoft 365
-  ms.date: 06/30/2021
+  title: MS-101 Implement Mobile Device Management in Microsoft 365
+  description: MS-101 Implement Mobile Device Management in Microsoft 365
+  ms.date: 08/02/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Implement Mobile Device Management in Microsoft 365
+title: MS-101 Implement Mobile Device Management in Microsoft 365
 prerequisites: |
   - Students should have completed a role-based administrator collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
@@ -24,7 +24,6 @@ roles:
 - solution-architect
 - technology-manager
 products:
-- azure-active-directory
 - m365
 - office-365
 subjects:
@@ -34,5 +33,6 @@ modules:
 - learn.wwl.deploy-mobile-device-management
 - learn.wwl.enroll-devices-to-mobile-device-management
 - learn.wwl.manage-device-compliance
+- learn.wwl.implement-endpoint-security-microsoft-intune
 trophy:
   uid: learn.wwl.implement-mobile-device-management-microsoft-365.trophy
