--- a/learn-m365-pr/paths/introduction-to-microsoft-365-security-metrics/index.yml
+++ b/learn-m365-pr/paths/introduction-to-microsoft-365-security-metrics/index.yml
@@ -1,16 +1,16 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.introduction-to-microsoft-365-security-metrics
 metadata:
-  title: Explore security metrics in Microsoft 365
-  description: Explore security metrics in Microsoft 365
-  ms.date: 04/30/2021
+  title: MS-101 Explore security metrics in Microsoft 365 Defender
+  description: MS-101 Explore security metrics in Microsoft 365 Defender
+  ms.date: 08/02/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Explore security metrics in Microsoft 365
+title: MS-101 Explore security metrics in Microsoft 365 Defender
 prerequisites: |
-  - Students should have completed a role-based administrator collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
+  -  Students should have completed a role-based administrator collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
   - Students must have a proficient understanding of general IT practices.
 summary: |
@@ -24,11 +24,14 @@ roles:
 - solution-architect
 - technology-manager
 products:
-- azure-active-directory
 - m365
 - office-365
 subjects:
+- identity-access
+- information-protection-governance
+- insider-risk
 - security
+- threat-protection
 modules:
 - learn.wwl.introduction-to-threat-vectors-data-breaches
 - learn.wwl.examine-zero-trust-approach-to-security-microsoft-365
