--- a/learn-m365-pr/paths/manage-your-microsoft-365-security-services/index.yml
+++ b/learn-m365-pr/paths/manage-your-microsoft-365-security-services/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.manage-your-microsoft-365-security-services
 metadata:
-  title: Manage your security services in Microsoft 365 Defender
-  description: Manage your security services in Microsoft 365 Defender
-  ms.date: 05/27/2022
+  title: MS-101 Manage your security services in Microsoft 365 Defender
+  description: MS-101 Manage your security services in Microsoft 365 Defender
+  ms.date: 08/02/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Manage your security services in Microsoft 365 Defender
+title: MS-101 Manage your security services in Microsoft 365 Defender
 prerequisites: |
   - Students should have completed a role-based administrator collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
