--- a/learn-m365-pr/paths/implement-microsoft-365-threat-intelligence/index.yml
+++ b/learn-m365-pr/paths/implement-microsoft-365-threat-intelligence/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.implement-microsoft-365-threat-intelligence
 metadata:
-  title: Implement threat protection by using Microsoft 365 Defender
-  description: Implement threat protection by using Microsoft 365 Defender
-  ms.date: 05/25/2022
+  title: MS-101 Implement threat protection by using Microsoft 365 Defender
+  description: MS-101 Implement threat protection by using Microsoft 365 Defender
+  ms.date: 08/02/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Implement threat protection by using Microsoft 365 Defender
+title: MS-101 Implement threat protection by using Microsoft 365 Defender
 prerequisites: |
   - Students should have completed a role-based administrator collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
