--- a/learn-m365-pr/paths/implement-data-governance-microsoft-365-intelligence/index.yml
+++ b/learn-m365-pr/paths/implement-data-governance-microsoft-365-intelligence/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.implement-data-governance-microsoft-365-intelligence
 metadata:
-  title: Implement compliance in Microsoft 365
-  description: Implement compliance in Microsoft 365
-  ms.date: 06/17/2022
+  title: MS-101 Implement compliance in Microsoft 365
+  description: MS-101 Implement compliance in Microsoft 365
+  ms.date: 08/02/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Implement compliance in Microsoft 365
+title: MS-101 Implement compliance in Microsoft 365
 prerequisites: |
   - Students should have completed a role-based administrator collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
