--- a/learn-m365-pr/paths/manage-data-governance-microsoft-365/index.yml
+++ b/learn-m365-pr/paths/manage-data-governance-microsoft-365/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.manage-data-governance-microsoft-365
 metadata:
-  title: Manage compliance in Microsoft 365
-  description: Manage compliance in Microsoft 365
-  ms.date: 06/22/2022
+  title: MS-101 Manage compliance in Microsoft 365
+  description: MS-101 Manage compliance in Microsoft 365
+  ms.date: 08/02/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Manage compliance in Microsoft 365
+title: MS-101 Manage compliance in Microsoft 365
 prerequisites: |
   - Students should have completed a role-based administrator collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
