--- a/learn-m365-pr/paths/prepare-for-device-management-microsoft-365/index.yml
+++ b/learn-m365-pr/paths/prepare-for-device-management-microsoft-365/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.prepare-for-device-management-microsoft-365
 metadata:
-  title: Prepare for device management in Microsoft 365
-  description: Prepare for device management in Microsoft 365
-  ms.date: 07/18/2022
+  title: MS-101 Prepare for device management in Microsoft 365
+  description: MS-101 Prepare for device management in Microsoft 365
+  ms.date: 08/02/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Prepare for device management in Microsoft 365
+title: MS-101 Prepare for device management in Microsoft 365
 prerequisites: |
   - Students should have completed a role-based administrator collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
@@ -35,7 +35,6 @@ subjects:
 modules:
 - learn.wwl.explore-device-management-use-microsoft-endpoint-manager
 - learn.wwl.prepare-your-windows-10-devices-for-co-management
-- learn.wwl.implement-endpoint-security-microsoft-intune
 - learn.wwl.plan-for-mobile-application-management
 trophy:
   uid: learn.wwl.prepare-for-device-management-microsoft-365.trophy
