changed files by pdets auto publish service, publishid[83660f3f-b222-4850-af74-a730f35d2655] and do [publish].

--- a/learn-m365-pr/wwl/manage-device-compliance/2-plan-device-compliance.yml
+++ b/learn-m365-pr/wwl/manage-device-compliance/2-plan-device-compliance.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.manage-device-compliance.plan-device-compliance
+uid: learn.wwl.manage-device-compliance.plan-for
 title: Plan for device compliance
 metadata:
   title: Plan for device compliance
