--- a/learn-m365-pr/m365/viva-goals-okr-coaching/index.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-coaching/index.yml
@@ -40,4 +40,4 @@ units:
 - learn-m365.viva-goals-okr-coaching.summary
 - learn-m365.viva-goals-okr-coaching.additional-feedback-examples
 badge:
-  uid: 
+  uid: learn-m365.learn-m365.viva-goals-okr-coaching.badge
