changed files by pdets auto publish service, publishid[e8e8749a-7ae5-4607-a113-b70f75dcd8ca] and do [publish].

--- a/learn-m365-pr/paths/manage-content-search-investigations-microsoft-365/index.yml
+++ b/learn-m365-pr/paths/manage-content-search-investigations-microsoft-365/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.manage-content-search-investigations-microsoft-365
 metadata:
-  title: Manage content search and investigations in Microsoft 365
-  description: Manage content search and investigations in Microsoft 365
-  ms.date: 07/26/2022
+  title: MS-101 Manage content search and investigations in Microsoft 365
+  description: MS-101 Manage content search and investigations in Microsoft 365
+  ms.date: 08/03/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Manage content search and investigations in Microsoft 365
+title: MS-101 Manage content search and investigations in Microsoft 365
 prerequisites: |
   - Students should have completed a role-based administrator collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
