changed files by pdets auto publish service, publishid[66188ba0-389f-4410-b6a3-b804ef42287c] and do [redirect].

--- a/learn-m365-pr/achievements.yml
+++ b/learn-m365-pr/achievements.yml
@@ -355,3 +355,8 @@ achievements:
   title: Transition from Skype for Business to Microsoft Teams
   summary: Transition from Skype for Business to Microsoft Teams
   iconUrl: /learn/achievements/teams-transition-from-skype.svg
+- uid: learn.wwl.manage-advanced-ediscovery.badge
+  type: badge
+  title: Manage Advanced eDiscovery
+  summary: Manage Advanced eDiscovery
+  iconUrl: /learn/achievements/ediscovery-management.svg
