--- a/learn-m365-pr/m365/advanced-ediscovery/index.yml
+++ b/learn-m365-pr/m365/advanced-ediscovery/index.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Module
 uid: learn-m365.compliance-discover-advanced-ediscovery
 metadata:
-  title: Discover and analyze content in place using eDiscovery (Premium)
-  description:  eDiscovery offers built-in tools such as Content Search to help identify data used as evidence in legal cases. Content Search helps identify relevant data directly in Microsoft Purview, reducing the amount of data that customers need to prepare and export to their third-party compliance tools. eDiscovery (Premium) builds on the eDiscovery (Standard) solution, helping organizations respond more quickly with a streamlined end-to-end eDiscovery workflow, intelligent search capabilities to decrease manual work, and save on third-party storage costs.
+  title: Discover and analyze content in place using Microsoft Purview eDiscovery (Premium)
+  description:  Microsoft Purview eDiscovery (Premium) offers built-in tools such as Content Search to help identify data used as evidence in legal cases. Content Search helps identify relevant data directly in Microsoft Purview, reducing the amount of data that customers need to prepare and export to their third-party compliance tools. eDiscovery (Premium) builds on the eDiscovery (Standard) solution, helping organizations respond more quickly with a streamlined end-to-end eDiscovery workflow, intelligent search capabilities to decrease manual work, and save on third-party storage costs.
   ms.date: 06/15/2022
   author: beccarobins
   ms.author: beccarobins
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
   ms.custom: intro-internal
-title: Discover and analyze content in place using eDiscovery (Premium)
-summary:   eDiscovery offers built-in tools such as Content Search to help identify data used as evidence in legal cases. Content Search helps identify relevant data directly in Microsoft Purview, reducing the amount of data that customers need to prepare and export to their third-party compliance tools. eDiscovery (Premium) builds on the eDiscovery (Standard) solution, helping organizations respond more quickly with a streamlined end-to-end eDiscovery workflow, intelligent search capabilities to decrease manual work, and save on third-party storage costs.
+title: Discover and analyze content in place using Microsoft Purview eDiscovery (Premium)
+summary:   Microsoft Purview eDiscovery (Premium) offers built-in tools such as Content Search to help identify data used as evidence in legal cases. Content Search helps identify relevant data directly in Microsoft Purview, reducing the amount of data that customers need to prepare and export to their third-party compliance tools. eDiscovery (Premium) builds on the eDiscovery (Standard) solution, helping organizations respond more quickly with a streamlined end-to-end eDiscovery workflow, intelligent search capabilities to decrease manual work, and save on third-party storage costs.
 abstract: |
   Upon completion of this module, you should be able to: 
   - Describe the phases of the Electronic Discovery Reference Model.
