changed files by pdets auto publish service, publishid[c6937f04-25df-431a-81ab-cedad345562a] and do [publish].

--- a/learn-m365-pr/paths/manage-teams-voice/index.yml
+++ b/learn-m365-pr/paths/manage-teams-voice/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.manage-teams-voice
 metadata:
-  title: Manage Teams Phone
-  description: Manage Teams Phone
-  ms.date: 12/29/2021
+  title: MS-720 Manage Teams Phone
+  description: MS-720 Manage Teams Phone
+  ms.date: 08/11/2022
   author: wwlpublish
   ms.author: dahans
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Manage Teams Phone
+title: MS-720 Manage Teams Phone
 prerequisites: |
   - Learners should be familiar with telecommunication technologies and have experience in Microsoft Teams, Microsoft 365, and PowerShell.
   - Learners should have completed the
