--- a/learn-m365-pr/wwl/manage-secure-user-access-microsoft-365/10-investigate-authentication-issues-using-sign-in-logs.yml
+++ b/learn-m365-pr/wwl/manage-secure-user-access-microsoft-365/10-investigate-authentication-issues-using-sign-in-logs.yml
@@ -6,7 +6,9 @@ metadata:
   description: "Investigate authentication issues using sign-in logs"
   ms.date: 08/11/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 3
