--- a/learn-m365-pr/wwl/configure-client-connectivity-to-microsoft-365/index.yml
+++ b/learn-m365-pr/wwl/configure-client-connectivity-to-microsoft-365/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.configure-client-aconnectivity-to-microsoft-365
 metadata:
   title: Configure client connectivity to Microsoft 365
   description: "Configure client connectivity to Microsoft 365"
-  ms.date: 04/05/2022
+  ms.date: 08/11/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -29,8 +29,9 @@ products:
 - m365
 - office-365
 subjects:
-- communication
 - cloud-computing
+- collaboration
+- communication
 units:
 - learn.wwl.configure-client-aconnectivity-to-microsoft-365.introduction
 - learn.wwl.configure-client-aconnectivity-to-microsoft-365.examine-how-automatic-client-configuration-works
