changed files by pdets auto publish service, publishid[4ae096a0-8664-46e0-8528-b33bf79f74a1] and do [publish].

--- a/learn-m365-pr/wwl/configure-client-connectivity-to-microsoft-365/6-knowledge-check.yml
+++ b/learn-m365-pr/wwl/configure-client-connectivity-to-microsoft-365/6-knowledge-check.yml
@@ -21,7 +21,7 @@ quiz:
     choices:
     - content: "Microsoft Message Analyzer"
       isCorrect: false
-      explanation: "Incorrect. Message Analyzer is an effective tool for troubleshooting network issues."
+      explanation: "Incorrect. Message Analyzer is a deprecated tool that's no longer available for troubleshooting client connectivity issues."
     - content: "Microsoft Remote Connectivity Analyzer"
       isCorrect: false
       explanation: "Incorrect. While the Microsoft Remote Connectivity Analyzer creates a log file, the tool itself focuses primarily on client connectivity issues."
