--- a/learn-m365-pr/wwl/manage-user-accounts-licenses-microsoft-365/8-knowledge-check.yml
+++ b/learn-m365-pr/wwl/manage-user-accounts-licenses-microsoft-365/8-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 04/05/2022
+  ms.date: 08/12/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -13,7 +13,7 @@ azureSandbox: false
 labModal: false
 durationInMinutes: 4
 content: |
-  [!include[](includes/7-knowledge-check.md)]
+  [!include[](includes/8-knowledge-check.md)]
 quiz:
   title: "Check your knowledge"
   questions:
@@ -21,10 +21,10 @@ quiz:
     choices:
     - content: "Because the user account is soft deleted for 30 days, the license will remain unavailable for 30 days before it can be assigned to another user"
       isCorrect: false
-      explanation: "Incorrect. This isn't what happens to a user's Microsoft 365 license when you delete the user's account."
-    - content: "To ensure the license is not assigned to another user in the event the deleted user account is restored, the license is placed on hold and can't be reassigned until the Global Admin runs a PowerShell command that releases the hold"
+      explanation: "Incorrect. This action isn't what happens to a user's Microsoft 365 license when you delete the user's account."
+    - content: "To ensure the license isn't assigned to another user in the event the deleted user account is restored, the license is placed on hold and can't be reassigned until the Global Admin runs a PowerShell command that releases the hold"
       isCorrect: false
-      explanation: "Incorrect. This isn't what happens to a user's Microsoft 365 license when you delete the user's account."
+      explanation: "Incorrect. This action isn't what happens to a user's Microsoft 365 license when you delete the user's account."
     - content: "The license for that user becomes available and can be assigned to another user"
       isCorrect: true
       explanation: "Correct. When you delete a user account, the user's license becomes available. You can then assign the unused license to another user."
