--- a/learn-m365-pr/wwl/manage-user-accounts-licenses-microsoft-365/index.yml
+++ b/learn-m365-pr/wwl/manage-user-accounts-licenses-microsoft-365/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.manage-user-accounts-licenses-microsoft-365
 metadata:
   title: Manage user accounts and licenses in Microsoft 365
   description: "Manage user accounts and licenses in Microsoft 365"
-  ms.date: 04/05/2022
+  ms.date: 08/12/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -16,6 +16,7 @@ abstract: |
   *   Create user accounts from both the Microsoft 365 admin center and Windows PowerShell.
   *   Manage user accounts and licenses in Microsoft 365.
   *   Recover deleted user accounts in Microsoft 365.
+  *   Perform bulk user maintenance in Azure Active Directory.
 prerequisites: |
   None
 iconUrl: /learn/achievements/manage-user-accounts-and-licenses-in-microsoft-365.svg
@@ -30,6 +31,7 @@ products:
 - office-365
 subjects:
 - data-management
+- employee-engagement
 - identity-access
 units:
 - learn.wwl.manage-user-accounts-licenses-microsoft-365.introduction
@@ -38,6 +40,7 @@ units:
 - learn.wwl.manage-user-accounts-licenses-microsoft-365.manage-user-account-settings
 - learn.wwl.manage-user-accounts-licenses-microsoft-365.manage-user
 - learn.wwl.manage-user-accounts-licenses-microsoft-365.recover-deleted-user-accounts
+- learn.wwl.manage-user-accounts-licenses-microsoft-365.perform-bulk-user-maintenance-azure-active-directory
 - learn.wwl.manage-user-accounts-licenses-microsoft-365.knowledge-check
 - learn.wwl.manage-user-accounts-licenses-microsoft-365.summary
 badge:
