--- a/learn-m365-pr/wwl/troubleshoot-hybrid-migration-issues/index.yml
+++ b/learn-m365-pr/wwl/troubleshoot-hybrid-migration-issues/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.troubleshoot-hybrid-migration-issues
 metadata:
   title: Troubleshoot hybrid and migration issues
   description: "Investigate and diagnose problems in an Exchange Online and Exchange Server hybrid organization, including mail flow problems, synchronization issues, and migration failures. MS-220"
-  ms.date: 05/18/2022
+  ms.date: 08/15/2022
   author: wwlpublish
   ms.author: dawnhopper
   ms.topic: interactive-tutorial
@@ -18,7 +18,7 @@ abstract: |
 prerequisites: |
   - Experience with PowerShell and the Exchange PowerShell module.
   - Significant experience deploying, managing, and troubleshooting Exchange environments.
-iconUrl: /learn/achievements/generic-badge.svg
+iconUrl: /learn/achievements/troubleshoot-hybrid-migration-issues.svg
 levels:
 - advanced
 roles:
@@ -29,6 +29,8 @@ products:
 - office-exchange-server
 - office-outlook
 - office-exchange-online
+subjects:
+- migration
 units:
 - learn.wwl.troubleshoot-hybrid-migration-issues.introduction
 - learn.wwl.troubleshoot-hybrid-migration-issues.troubleshoot-setup-mail-flow-hybrid-configurations
