--- a/learn-m365-pr/wwl/manage-regulatory-privacy-requirements-microsoft-priva/index.yml
+++ b/learn-m365-pr/wwl/manage-regulatory-privacy-requirements-microsoft-priva/index.yml
@@ -29,7 +29,7 @@ roles:
 - security-engineer
 - technology-manager
 products:
-- azure-purview
+- microsoft-purview
 - m365
 - office-365
 subjects:
