--- a/learn-m365-pr/wwl/implement-email-collaboration-protection/index.yml
+++ b/learn-m365-pr/wwl/implement-email-collaboration-protection/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.implement-email-collaboration-protection
 metadata:
   title: Implement threat protection by using Microsoft Defender for Office 365
   description: "Implement threat protection by using Microsoft Defender for Office 365"
-  ms.date: 05/16/2022
+  ms.date: 08/17/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -18,7 +18,7 @@ abstract: |
   - Run realistic attack scenarios using Attack Simulator to help identify vulnerable users before a real attack impacts your organization.
 prerequisites: |
   None
-iconUrl: /learn/achievements/generic-badge.svg
+iconUrl: /learn/achievements/implement-email-collaboration-protection.svg
 levels:
 - intermediate
 roles:
@@ -29,6 +29,14 @@ roles:
 products:
 - m365
 - office-365
+subjects:
+- cloud-computing
+- cloud-security
+- collaboration
+- communication
+- information-protection-governance
+- security
+- threat-protection
 units:
 - learn.wwl.implement-email-collaboration-protection.introduction
 - learn.wwl.implement-email-collaboration-protection.explore-microsoft-defender-office-365-protection-stack
