--- a/learn-m365-pr/m365/viva-goals-okr-coaching/additional-feedback-examples.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-coaching/additional-feedback-examples.yml
@@ -4,7 +4,7 @@ title: Additional OKR feedback examples
 metadata:
   unitType: learning-content
   title: Additional OKR feedback examples
-  description: Examples orf OKR feedback.
+  description: Examples of OKR feedback.
   ms.date: 07/25/2022
   author: rasanders
   ms.author: rasanders
