Apply pencil edits for blocking issues from PR review

--- a/learn-m365-pr/m365/viva-goals-okr-coaching/key-results.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-coaching/key-results.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.viva-goals-okr-coaching.key-results
-title: Key Results
+title: Key results
 metadata:
   unitType: learning-content
-  title: Key Results
+  title: Key results
   description: Learn how to guide a group through creating key results.
   ms.date: 07/25/2022
   author: rasanders
