--- a/learn-m365-pr/m365/viva-goals-okr-coaching/meeting-preparation.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-coaching/meeting-preparation.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.viva-goals-okr-coaching.meeting-preparation
-title: Meeting Preparation
+title: Meeting preparation
 metadata:
   unitType: learning-content
-  title: Meeting Preparation
+  title: Meeting preparation
   description: Learn how to prepare for an OKR coaching meeting.
   ms.date: 07/25/2022
   author: rasanders
