--- a/learn-m365-pr/m365/m365-teams-collab-deploy-clients/summary-knowledge-check.yml
+++ b/learn-m365-pr/m365/m365-teams-collab-deploy-clients/summary-knowledge-check.yml
@@ -44,7 +44,7 @@ quiz:
       - content: "Microsoft Teams will only block access to the web interface"
         isCorrect: false  
         explanation: "That's incorrect. Microsoft Teams won't only block access to the web interface."
-      - content: "Microsoft Teams will prompt the user to download a desktop or mobile client"  
+      - content: "Microsoft Teams blocks access to the web interface and prompts the user to download a desktop or mobile client"  
         isCorrect: true
         explanation: "That's correct. Microsoft Teams will block access to the web interface and prompt the user for other ways to access Teams."       
       - content: "Microsoft Teams is built with graceful degradation and provides whatever features the browser can support"  
