--- a/learn-m365-pr/achievements.yml
+++ b/learn-m365-pr/achievements.yml
@@ -315,11 +315,6 @@ achievements:
   title: Troubleshoot data governance
   summary: Troubleshoot data governance
   iconUrl: /learn/achievements/loss-prevention-troubleshoot.svg
-- uid: learn-m365.m365-compliance-information-transition-to-microsoft-information-protection
-  type: badge
-  title: Transition from Azure Information Protection to Microsoft Information Protection
-  summary: Transition from Azure Information Protection to Microsoft Information Protection
-  iconUrl: /learn/achievements/transition-azure-information-microsoft-information-protection.svg
 - uid: learn.wwl.introduction-to-co-management-of-windows-10-devices.badge
   type: badge
   title: Explore Co-management of Windows 10 devices
@@ -365,3 +360,8 @@ achievements:
   title: Manage Advanced eDiscovery
   summary: Manage Advanced eDiscovery
   iconUrl: /learn/achievements/ediscovery-management.svg
+- uid: learn-m365.m365-compliance-information-transition-to-microsoft-information-protection.badge
+  type: badge
+  title: Transition from Azure Information Protection to Microsoft Information Protection
+  summary: Transition from Azure Information Protection to Microsoft Information Protection
+  iconUrl: /learn/achievements/transition-azure-information-microsoft-information-protection.svg
