--- a/learn-m365-pr/wwl/evaluate-windows-client-installation-methods/index.yml
+++ b/learn-m365-pr/wwl/evaluate-windows-client-installation-methods/index.yml
@@ -3,9 +3,9 @@ uid: learn.wwl.evaluate-windows-client-installation-methods
 metadata:
   title: Evaluate Windows client installation methods
   description: "In this module, you will also learn about the different processes and methods for installing Windows 10 and later."
-  ms.date: 06/16/2022
+  ms.date: 08/30/2022
   author: wwlpublish
-  ms.author: brhinkel
+  ms.author: rstearman
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Evaluate Windows client installation methods
