changed files by pdets auto publish service, publishid[123d8019-55d0-4a4d-9a9f-52d1ef29c583] and do [publish].

--- a/learn-m365-pr/wwl/upgrade-migrate-windows-clients/index.yml
+++ b/learn-m365-pr/wwl/upgrade-migrate-windows-clients/index.yml
@@ -3,9 +3,9 @@ uid: learn.wwl.upgrade-migrate-windows-clients
 metadata:
   title: Upgrade and migrate Windows clients
   description: "This module examines the fundamentals of upgrading and migrating processes for a single Windows device."
-  ms.date: 06/16/2022
+  ms.date: 08/30/2022
   author: wwlpublish
-  ms.author: brhinkel
+  ms.author: rstearman
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Upgrade and migrate Windows clients
