--- a/learn-m365-pr/wwl/upgrade-migrate-windows-clients/index.yml
+++ b/learn-m365-pr/wwl/upgrade-migrate-windows-clients/index.yml
@@ -3,11 +3,11 @@ uid: learn.wwl.upgrade-migrate-windows-clients
 metadata:
   title: Upgrade and migrate Windows clients
   description: "This module examines the fundamentals of upgrading and migrating processes for a single Windows device."
-  ms.date: 08/31/2022
+  ms.date: 09/02/2022
   author: wwlpublish
   ms.author: rstearman
   ms.topic: interactive-tutorial
-  ms.prod: learning-m365
+  ms.prod: learning-azure
 title: Upgrade and migrate Windows clients
 summary: This module examines the fundamentals of upgrading and migrating processes for a single Windows device.
 abstract: |
