--- a/learn-m365-pr/m365/m365-design-successful-virtual-events/index.yml
+++ b/learn-m365-pr/m365/m365-design-successful-virtual-events/index.yml
@@ -25,12 +25,12 @@ abstract: |
     - Review how your event went and identify opportunities for improvement
     - Understand how to gather feedback and turn them into insights
 
-prerequisites: | # user input: prerequisites (https://review.docs.microsoft.com/help/learn/id-guidance-prerequisites?branch=master)
+prerequisites: | # user input: prerequisites (https://review.docs.microsoft.com/help/learn/id-guidance-prerequisites?branch=main)
   - General understanding of virtual events, Microsoft Teams, and accessibility requirements
 iconUrl: /learn/achievements/design-a-successful-virtual-event.svg
-levels: # user input: add levels from level taxonomy (https://review.docs.microsoft.com/help/contribute/metadata-taxonomies?branch=master#level)
+levels: # user input: add levels from level taxonomy (https://review.docs.microsoft.com/help/contribute/metadata-taxonomies?branch=main#level)
   - intermediate
-roles: # user input: add roles from role taxonomy (https://review.docs.microsoft.com/help/contribute/metadata-taxonomies?branch=master#role)
+roles: # user input: add roles from role taxonomy (https://review.docs.microsoft.com/help/contribute/metadata-taxonomies?branch=main#role)
   - business-user
   - administrator
 products:
